# kanemoot

./: .gitignore  LICENSE
client/: CMakeLists.txt  main.cpp  resources.qrc
client/controller/: appcontroller.cpp  appcontroller.h  basepage.cpp  basepage.h  chatpage.cpp  chatpage.h  loginpage.cpp  loginpage.h  registrationpage.cpp  registrationpage.h
client/core/: SystemFatalMacOSError.mm  apiendpoints.cpp  apiendpoints.h  app.cpp  app.h  errorcode.cpp  errorcode.h  errorhandler.cpp  errorhandler.h  securestorage.cpp  securestorage.h  serverdata.h  settingsmanager.cpp  settingsmanager.h  systemfatalerror.cpp  systemfatalerror.h
client/domain/: authmanager.cpp  authmanager.h  chatmanager.cpp  chatmanager.h
client/network/: websocketclient.cpp  websocketclient.h
client/ui/: App.qml
client/ui/components/: AccentColorSelector.qml  AddServerPopup.qml  AnimatedBackground.qml  ChatArea.qml  ChatListArea.qml  ChatMessageList.qml  ChatPageComponent.qml  DateSeparatorItem.qml  EditPopup.qml  ErrorToast.qml  ErrorToastManager.qml  MessageItem.qml  ServerItem.qml  SettingDropdown.qml  SettingToggle.qml  SettingsOverlay.qml  SettingsPanel.qml
client/ui/pages/: ChatPage.qml  LoginPage.qml  RegistrationPage.qml
client/ui/themes/: Dark.qml  Light.qml
client/utils/: authvalidator.cpp  authvalidator.h  keycatcher.cpp  keycatcher.h  logging.cpp  logging.h
docs/: arch-server-setup.md  connection architecture and features.md  download domain.md  error codes.md  ios-websocket-contract.md  openbsd-server-setup.md  server architecture.md
server/: CMakeLists.txt  requirements.txt  test.html
server/auth_service/: .env  database.py  main.py  models.py
server/chat_service/: chat.py  main.py  models.py
server/main_service/: .env  main.py  models.py
server/main_service/handlers/: websocket_handler.py
server/main_service/repositories/: channels.py  memberships.py  messages.py  servers.py
server/main_service/services/: chat_service.py  server_service.py
